Nav alignment fix

--- a/frontedge/css/styles.css
+++ b/frontedge/css/styles.css
@@ -1573,7 +1573,6 @@ header[role="banner"] .brand_img {
   -o-transition: all 0.6s ease-in-out;
   -webkit-transition: all 0.6s ease-in-out;
   transition: all 0.6s ease-in-out;
-  text-align: center;
   /* Landscape tablets and desktop or laptops */
 }
 @media only screen and (min-width: 992px) {
@@ -1690,17 +1689,15 @@ header[role="banner"] .brand_img {
 
 /* line 264, ../sass/partials/_header_nav.scss */
 .subMenuItem {
-  text-align: left;
   padding: 11px 0 12px;
 }
 
-/* line 269, ../sass/partials/_header_nav.scss */
+/* line 268, ../sass/partials/_header_nav.scss */
 .subMenuItem_link {
-  text-align: left;
   display: block;
 }
 
-/* line 274, ../sass/partials/_header_nav.scss */
+/* line 272, ../sass/partials/_header_nav.scss */
 .nav_trigger {
   display: inline-block;
   margin-left: 20px;
@@ -1708,18 +1705,18 @@ header[role="banner"] .brand_img {
   /* Landscape tablets and desktop or laptops */
 }
 @media only screen and (min-width: 992px) {
-  /* line 274, ../sass/partials/_header_nav.scss */
+  /* line 272, ../sass/partials/_header_nav.scss */
   .nav_trigger {
     display: none;
   }
 }
 
-/* line 284, ../sass/partials/_header_nav.scss */
+/* line 282, ../sass/partials/_header_nav.scss */
 .primary-nav-trigger {
   position: relative;
 }
 
-/* line 288, ../sass/partials/_header_nav.scss */
+/* line 286, ../sass/partials/_header_nav.scss */
 .menu-icon {
   /* this span is the central line of the menu icon */
   display: block;
@@ -1733,7 +1730,7 @@ header[role="banner"] .brand_img {
   transition: background-color 0.6s;
   /* these are the upper and lower lines in the menu icon */
 }
-/* line 297, ../sass/partials/_header_nav.scss */
+/* line 295, ../sass/partials/_header_nav.scss */
 .menu-icon::before, .menu-icon:after {
   content: '';
   width: 100%;
@@ -1746,23 +1743,23 @@ header[role="banner"] .brand_img {
   -webkit-transition: -webkit-transform 0.6s, top 0.6s, background-color 0s;
   transition: transform 0.6s, top 0.6s, background-color 0s;
 }
-/* line 307, ../sass/partials/_header_nav.scss */
+/* line 305, ../sass/partials/_header_nav.scss */
 .menu-icon::before {
   top: -7px;
 }
-/* line 310, ../sass/partials/_header_nav.scss */
+/* line 308, ../sass/partials/_header_nav.scss */
 .menu-icon::after {
   top: 7px;
 }
-/* line 313, ../sass/partials/_header_nav.scss */
+/* line 311, ../sass/partials/_header_nav.scss */
 .menu-icon.is-clicked {
   background-color: rgba(255, 204, 0, 0);
 }
-/* line 315, ../sass/partials/_header_nav.scss */
+/* line 313, ../sass/partials/_header_nav.scss */
 .menu-icon.is-clicked::before, .menu-icon.is-clicked::after {
   background-color: #ffcc00;
 }
-/* line 319, ../sass/partials/_header_nav.scss */
+/* line 317, ../sass/partials/_header_nav.scss */
 .menu-icon.is-clicked::before {
   top: 0;
   -moz-transform: rotate(135deg);
@@ -1770,7 +1767,7 @@ header[role="banner"] .brand_img {
   -webkit-transform: rotate(135deg);
   transform: rotate(135deg);
 }
-/* line 323, ../sass/partials/_header_nav.scss */
+/* line 321, ../sass/partials/_header_nav.scss */
 .menu-icon.is-clicked::after {
   top: 0;
   -moz-transform: rotate(225deg);
@@ -1779,7 +1776,7 @@ header[role="banner"] .brand_img {
   transform: rotate(225deg);
 }
 
-/* line 330, ../sass/partials/_header_nav.scss */
+/* line 328, ../sass/partials/_header_nav.scss */
 .menu-text {
   font-size: 8px;
   text-transform: uppercase;
@@ -2961,15 +2958,8 @@ footer[role="contentinfo"] {
   line-height: normal;
   align-items: center;
   white-space: nowrap;
-  /* Tablets and phablets */
 }
-@media only screen and (max-width: 767px) {
-  /* line 48, ../sass/partials/_dialogs.scss */
-  .dropdown-menu li > *.subMenuItem_link, .dropdown-menu li > a.subMenuItem_link {
-    justify-content: center;
-  }
-}
-/* line 53, ../sass/partials/_dialogs.scss */
+/* line 47, ../sass/partials/_dialogs.scss */
 .dropdown-menu li > *:hover, .dropdown-menu li > a:hover {
   background: #f0fbff;
   color: #00BAFF;
@@ -2985,17 +2975,17 @@ footer[role="contentinfo"] {
     opacity: 1;
   }
 }
-/* line 72, ../sass/partials/_dialogs.scss */
+/* line 66, ../sass/partials/_dialogs.scss */
 .dropdown-toggle::after {
   display: none;
 }
 
-/* line 76, ../sass/partials/_dialogs.scss */
+/* line 70, ../sass/partials/_dialogs.scss */
 .tooltip .arrow::before {
   border-top-color: #000000 !important;
 }
 
-/* line 80, ../sass/partials/_dialogs.scss */
+/* line 74, ../sass/partials/_dialogs.scss */
 .tooltip-inner {
   font-size: 12px;
   background-color: #000000;
@@ -3003,41 +2993,41 @@ footer[role="contentinfo"] {
   padding: 6px 12px;
 }
 
-/* line 87, ../sass/partials/_dialogs.scss */
+/* line 81, ../sass/partials/_dialogs.scss */
 .modal-backdrop {
   background-color: black;
   display: none;
 }
 
-/* line 92, ../sass/partials/_dialogs.scss */
+/* line 86, ../sass/partials/_dialogs.scss */
 .modal-content {
   border-radius: 15px;
 }
 
-/* line 96, ../sass/partials/_dialogs.scss */
+/* line 90, ../sass/partials/_dialogs.scss */
 .modal-dialog {
   z-index: 2000;
   max-width: 520px;
   /* Tablets and phablets */
 }
 @media only screen and (max-width: 767px) {
-  /* line 96, ../sass/partials/_dialogs.scss */
+  /* line 90, ../sass/partials/_dialogs.scss */
   .modal-dialog {
     margin-right: 15px;
     margin-left: 15px;
   }
 }
 
-/* line 106, ../sass/partials/_dialogs.scss */
+/* line 100, ../sass/partials/_dialogs.scss */
 .modal {
   z-index: 3000;
 }
-/* line 109, ../sass/partials/_dialogs.scss */
+/* line 103, ../sass/partials/_dialogs.scss */
 .modal-open .modal {
   background-color: rgba(0, 0, 0, 0.95);
   padding: none !important;
 }
-/* line 114, ../sass/partials/_dialogs.scss */
+/* line 108, ../sass/partials/_dialogs.scss */
 .modal .modal-header {
   border-bottom: none;
   padding: 20px 15px 0;
@@ -3045,32 +3035,32 @@ footer[role="contentinfo"] {
   /* Tablets and phablets */
 }
 @media only screen and (min-width: 768px) {
-  /* line 114, ../sass/partials/_dialogs.scss */
+  /* line 108, ../sass/partials/_dialogs.scss */
   .modal .modal-header {
     padding-left: 30px;
     padding-right: 30px;
   }
 }
-/* line 125, ../sass/partials/_dialogs.scss */
+/* line 119, ../sass/partials/_dialogs.scss */
 .modal .modal-body {
   position: relative;
   padding: 30px 15px;
   /* Tablets and phablets */
 }
 @media only screen and (min-width: 768px) {
-  /* line 125, ../sass/partials/_dialogs.scss */
+  /* line 119, ../sass/partials/_dialogs.scss */
   .modal .modal-body {
     padding-left: 30px;
     padding-right: 30px;
   }
 }
-/* line 135, ../sass/partials/_dialogs.scss */
+/* line 129, ../sass/partials/_dialogs.scss */
 .modal .modal-footer {
   border-top: none;
   padding: 0 15px 10px;
 }
 
-/* line 141, ../sass/partials/_dialogs.scss */
+/* line 135, ../sass/partials/_dialogs.scss */
 .modal-title {
   font-size: 16px;
   font-weight: 700;
